--- a/control_module/pom.xml
+++ b/control_module/pom.xml
@@ -5,6 +5,13 @@
 
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>com.stage2</groupId>
+        <artifactId>Stage_2</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+
     <groupId>com.example</groupId>
     <artifactId>control-service</artifactId>
     <version>1.0.0</version>
