--- a/control_module/pom.xml
+++ b/control_module/pom.xml
@@ -13,7 +13,7 @@
     </parent>
 
     <groupId>com.example</groupId>
-    <artifactId>control-service</artifactId>
+    <artifactId>control_module</artifactId>
     <version>1.0.0</version>
 
     <properties>
