--- a/ingestion_service/pom.xml
+++ b/ingestion_service/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <groupId>com.example</groupId>
-    <artifactId>crawler-service</artifactId>
+    <artifactId>ingestion_service</artifactId>
     <version>1.0.0</version>
 
     <properties>
