--- a/indexing_service/pom.xml
+++ b/indexing_service/pom.xml
@@ -68,6 +68,13 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.15.0</version>
         </dependency>
+
+        <!-- For mysql connection -->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
