Added Benchmarking for the pipeline (ingestion + indexing)

--- a/benchmarks/pom.xml
+++ b/benchmarks/pom.xml
@@ -47,7 +47,13 @@
             <artifactId>search-service</artifactId>
             <version>1.0.0</version>
         </dependency>
-        
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>ingestion_service</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+
 
     </dependencies>
 
